--- a/index.css
+++ b/index.css
@@ -5,20 +5,29 @@ body {
 button {
   text-transform: uppercase;
 }
+
 #app {
-  padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 80%;
-  padding: 15px;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .page-container {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 90%;
+}
+
+.details-container {
+  flex-grow: 5;
+  display: flex;
   flex-direction: row;
   justify-content: center;
-  flex-grow: 10;
   border: 1px solid blue;
   padding: 15px;
   width: 80%;
@@ -52,41 +61,6 @@ button {
   width: 50%;
   padding: 25px;
   border: 1px solid lightgray;
-}
-
-.form-container {
-  flex-grow: 6;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
-}
-
-.tab-container {
-  flex-grow: 5;
-  width: 80%;
-  height: 350px;
-  padding: 15px;
-  border: 1px solid blue;
-}
-
-.tab-holder {
-  display: flex;
-  justify-content: center;
-  border: 1px solid black;
-}
-tab {
-  flex-grow: 1;
-  border: 1px solid black;
-  text-align: center;
-  text-transform: uppercase;
-  padding: 5px 0;
-}
-
-.tab-content {
-  border: 1px solid black;
-  height: 85%;
-  text-align: center;
-  padding-top: 20px;
 }
 
 .supply-buttons {
@@ -154,20 +128,54 @@ tab {
 }
 
 .add-to-cart div {
-  font-size: 20px;
+  flex-grow: 1;
+  font-size: 15px;
   font-weight: bold;
-  width: 50%;
-  align-self: center;
-  margin-left: 50px;
+  margin: 10px 0 10px 10px;
 }
 
 .add-to-cart button {
-  margin: 10px 0;
+  flex-grow: 3;
+  margin: 10px;
   height: 50px;
-  width: 50%;
-  padding: 5px;
   background: blue;
   color: white;
   font-size: 16px;
   border-radius: 0;
+}
+
+.form-container {
+  flex-grow: 6;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+}
+
+.tab-container {
+  flex-grow: 1;
+  width: 80%;
+  height: 80%;
+  padding: 15px;
+  border: 1px solid blue;
+}
+
+.tab-holder {
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+}
+
+.tab {
+  flex-grow: 1;
+  border: 1px solid black;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 5px 0;
+}
+
+.tab-content {
+  border: 1px solid black;
+  height: 85%;
+  text-align: center;
+  padding-top: 20px;
 }
